--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,11 @@
     <string name="navbar_profile">Profile</string>
     <string name="login_error_toast">Unable to sign you in: %d</string>
     <string name="login_error_cancelled">You need to sign in to use this app</string>
+    <string name="mood_neutral">Neutral</string>
+    <string name="mood_happy">Happy</string>
+    <string name="mood_angry">Angry</string>
+    <string name="mood_sad">Sad</string>
+    <string name="mood_disgusted">Disgusted</string>
+    <string name="mood_scared">Scared</string>
+    <string name="mood_surprised">Surprised</string>
 </resources>
