Added basic spinner.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,15 @@
     <string name="navbar_profile">Profile</string>
     <string name="login_error_toast">Unable to sign you in: %d</string>
     <string name="login_error_cancelled">You need to sign in to use this app</string>
+    
+    <string-array name="filter">
+        <item>Neutral</item>
+        <item>Happy</item>
+        <item>Surprised</item>
+        <item>Angry</item>
+        <item>Scared</item>
+        <item>Disgusted</item>
+        <item>Sad</item>
+        <item>None</item>
+    </string-array>
 </resources>
