login: add register form to the UI

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,7 @@
     <string name="mood_disgusted">Disgusted</string>
     <string name="mood_scared">Scared</string>
     <string name="mood_surprised">Surprised</string>
+    <string name="login_sign_in">Sign In</string>
+    <string name="login_logging_in">Signing In...</string>
+    <string name="login_sign_up">Sign Up</string>
 </resources>
