--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,14 +14,7 @@
     <string name="add_post_done_button">Done</string>
     <string name="add_post_description_hint">Describe your feeling (Maximum 20 characters).</string>
 
-    <string name="spinner_empty">None</string>
-
-    <string-array name="social_conditions">
-        <item>Single</item>
-        <item>Pair</item>
-        <item>Small Group</item>
-        <item>Crowd</item>
-    </string-array>
+    <string name="filter_empty">None</string>
 
     <string name="mood_neutral">Neutral</string>
     <string name="mood_happy">Happy</string>
