--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,6 @@
     <string name="login_date">Birthday</string>
     <string name="login_invalid_date">The date is invalid</string>
     <string name="add_post_location_button">Location</string>
+    <string name="birth_date_button_text">Birthdate</string>
+    <string name="max_char_text">(Maximum 100 characters)</string>
 </resources>
