--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,5 @@
     <string name="add_post_location_button">Location</string>
     <string name="birth_date_button_text">Birthdate</string>
     <string name="max_char_text">(Maximum 100 characters)</string>
+    <string name="search_input_text">Search</string>
 </resources>
