--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,6 +41,8 @@
     <string name="login_bio">Bio</string>
     <string name="login_date">Birthday</string>
     <string name="login_invalid_date">The date is invalid</string>
+    <string name="login_no_date">Birth Date cannot be empty</string>
+    <string name="login_no_username">Username cannot be empty</string>
     <string name="log_out_button">Log Out</string>
     <string name="add_post_location_button">Location</string>
     <string name="birth_date_button_text">Birthdate</string>
